--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     // the link to your model provided by Teachable Machine export panel
     const URL = "./my_model/";
+//    const URL = "https://teachablemachine.withgoogle.com/models/36x-R9aDo/";
 
     let model, webcam, labelContainer, maxPredictions;
 
